# MailClient

./: .gitignore  CMakeLists.txt  LICENSE
MailClient/: CMakeLists.txt
MailClient/sources/app/: ContactOperations.h  MailClient.h  MailClientOperations.h
MailClient/sources/data/: Contact.h  ContactDatabase.cpp  ContactDatabase.h  MailDatabase.cpp  MailDatabase.h  MailStorage.cpp  MailStorage.h  Profile.h
MailClient/sources/gui/: AddressBookWindow.cpp  ContactDetails.cpp  ContactsView.cpp  DirectoryView.cpp  MailBoxView.cpp  MailComposer.cpp  MailView.cpp  MainWindow.cpp  MainWindow.h  ProfileView.cpp  ProfileView.h
MailClient/sources/network/: ImapClient.cpp  ImapClient.h  Mail.cpp  Network.cpp  Network.h  SmtpClient.cpp  TcpClient.cpp
MailClient/sources/utils/: Base64.h  DateTime.cpp  DateTime.h  Logger.h  SignalHandler.cpp  SignalHandler.h  StringEx.h
QtExtraWidgets/examples/QtRichDataList/: CMakeLists.txt
QtExtraWidgets/examples/QtRichDataList/src/: MainWindow.cpp  MainWindow.h  QtDemo.cpp  QtDemo.h  main.cpp
include/: AddressBookWindow.h  Contact.h  ContactDatabase.h  ContactDetails.h  ContactOperations.h  DirectoryView.h  Logger.h  Mail.h  MailBoxView.h  MailClient.h  MailClientOperations.h  MailComposer.h  MailDatabase.h  MailView.h  Profile.h  ProfileView.h  Tasks.h
sources/: AddressBookWindow.cpp  ContactDatabase.cpp  ContactDetails.cpp  ContactsView.cpp  DirectoryView.cpp  ImapClient.cpp  Logger.cpp  Mail.cpp  MailBoxView.cpp  MailClient.cpp  MailComposer.cpp  MailDatabase.cpp  MailStorage.cpp  MailView.cpp  MainWindow.cpp  Network.cpp  ProfileView.cpp  SmtpClient.cpp  StringEx.cpp  TcpClient.cpp
